--- a/make_my_trip/package.json
+++ b/make_my_trip/package.json
@@ -3,20 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^5.0.0-alpha.24",
+    "@material-ui/lab": "^5.0.0-alpha.24",
+    "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "date-fns": "^2.24.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
+    "react-calendar": "^3.4.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
